--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@ body {
 
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--white);
 
   z-index: 10000;
 }
