--- a/app/modulestyles/finish_screen.module.css
+++ b/app/modulestyles/finish_screen.module.css
@@ -5,8 +5,7 @@
   
     width: 100vw;
     height: 100vh;
-  
-    z-index: -1;
+    pointer-events: none;
 }
 .container {
     position: absolute;
