--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+body::-webkit-scrollbar {
+  width: 0em;
+  height: 0em;
+}
+div::-webkit-scrollbar {
+  width: 0em;
+  height: 0em;
+}
+
 .svg_blend {
   position: fixed;
   top: -1vh;
